--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Build a Tribute Page</title>
+	<title>Dr. APJ Abdul Kalam </title>
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
